Fixes centering on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,6 +46,7 @@
         width: 100%;
         max-width: 100%;
         text-align: center;
+        padding: 20px;
     }
 
     .first {
